# PackageCreation

./: README.md  requirements.txt
myCustomPackage/: db.sqlite3  manage.py
myCustomPackage/django_books/: LICENCE  MANIFEST.in  README.rst  setup.cfg
myCustomPackage/django_books/booksPackage/: models.py  urls.py
myCustomPackage/django_books/django_books.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
myCustomPackage/myCustomPackage/: asgi.py  settings.py  urls.py  wsgi.py
sampleProject/: db.sqlite3  django_books-2.0-py3-none-any.whl
sampleProject/sampleProject/: asgi.py  settings.py  urls.py  wsgi.py
