[metadata]
name = django-books
version = 2.0
author = Sait
author_email = ozbeyysait@gmail.com
maintainer = Sait
maintainer_email = ozbeyysait@gmail.com
description = Sample Django app
long_description = file:README.rst
url = https://www.saitozbey.com
licence = MIT
keywords = django books
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Licence :: OSI Approved :: MIT Licence
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find: